--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "janibot2",
   "version": "0.0.1",
-  "description": "A discord bot",
+  "description": "Yet another discord bot",
   "main": "jani.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
